--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.caelum.vraptor</groupId>
 	<artifactId>vraptor-extjsjson</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0-beta</version>
 
 	<name>vraptor-extjsjson</name>
 	<url>http://github.com/linyatis/vraptor-extjsjson</url>
